--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_masked_text2: ^0.9.1
+  intl_utils: ^2.8.7
+  intl: ^0.19.0
+  http: ^1.2.2
+  geolocator: ^13.0.2
+  geocoding: ^3.0.0
+  permission_handler: ^11.3.1
+  youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
   flutter_test:
